Fix overlapping of large images in supply cart

--- a/src/main/webapp/assets/css/less/supply.less
+++ b/src/main/webapp/assets/css/less/supply.less
@@ -39,11 +39,6 @@
   height: 120px;
 }
 
-.supply-item-image-big {
-  height: 140px;
-  margin-left: 10px;
-}
-
 .add-to-cart-btn {
   width: 90%;
   margin: 5px 10px 10px 10px;
